# mini-plague-sim

./: CMakeLists.txt
include/: human.h  simulation.h
src/: main.c  simulation.c
